<resources>
    <string name="app_name">Lunch Finder</string>
    <string name="welcome_msg">Welcome %s!</string>
    <string name="action_settings">Settings</string>
    <string name="is_user_registered">is_user_registered</string>
    <string name="err_msg_name">Name is requried</string>
    <string name="err_msg_email">Email is not valid</string>
    <string name="err_msg_phone">Phone is required</string>
    <string name="pref_lunch_status_key">pref_lunch_status_key</string>


    <!-- SyncAdapter related -->
    <string name="sync_account_type">lunchfinder.appinvent.uk</string>
    <string name="content_authority">uk.appinvent.lunchfinder</string>
    <string name="details_button_text"><u>Details</u></string>
    <string name="title_activity_dish_details">DishDetailsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_now_text">Order Now</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">close</string>

    <array name="category_array">
        <item>Curry</item>
        <item>Pasta</item>
        <item>Salads</item>
        <item>Sandwiches</item>
    </array>
    <string name="nav_home">Home</string>
    <string name="nav_curry">Curry</string>
    <string name="nav_pasta">Pasta</string>
    <string name="nav_salad">Salad</string>
    <string name="nav_sandwich">Sandwich</string>
    <string name="appwidget_text">Loading</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="banner_ad_unit_id">ca-app-pub-6954935306328673/2842952940</string>
    <string name="column_size">1</string>
</resources>
